--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
   - curl -s https://getcomposer.org/installer | php -- --quiet
   - php composer.phar install
 script:
+  - vendor/bin/phpunit
   - vendor/bin/phpcs --report="full" --standard="PSR2" src/
   - vendor/bin/phpcpd --verbose src/
 notifications:
